fixed bug for conflicting lang3 libaries in classpath

--- a/repository/repository-web/src/main/resources/static/partials/mapping/mappingcreator.html
+++ b/repository/repository-web/src/main/resources/static/partials/mapping/mappingcreator.html
@@ -2,7 +2,8 @@
 <section class="content" id="mapping">
    <ol class="breadcrumb">
       <li><a href="#"></i>Explore</a></li>
-      <li class="active">Create Mapping Specification</li>
+      <li><a href="./#/details/{{modelId.namespace}}/{{ modelId.name }}/{{ modelId.version }}"></i>{{modelId.prettyFormat}}</a></li>
+      <li class="active">Mapping Specification</li>
   </ol>
   <div class="row">
   <div class="col-md-7">
