--- a/repository/repository-web/src/main/resources/static/partials/details-template.html
+++ b/repository/repository-web/src/main/resources/static/partials/details-template.html
@@ -41,13 +41,12 @@
 			<div ng-show="authority === 'ROLE_ADMIN' || authority === 'ROLE_USER'">
 				<a class="btn btn-primary pull-left" ng-click="openCreateModelVersionDialog()" role="button">
 					<span class="fa fa-plus" aria-hidden="true"></span>&nbsp;Create Version</a>
-				<div class="pull-right">&nbsp;&nbsp;</div>
+					<div class="pull-left">&nbsp;&nbsp;</div>
 			</div>
 			
 			<div ng-show="(authority === 'ROLE_ADMIN' || authority === 'ROLE_USER') && model.type === 'InformationModel' ">
 				<a class="btn btn-primary pull-left" href="#/payloadmapping/{{model.id.namespace}}/{{model.id.name}}/{{model.id.version}}" role="button">
-					<span class="fa fa-plus" aria-hidden="true"></span>&nbsp;Create Payload Mapping</a>
-				<div class="pull-right">&nbsp;&nbsp;</div>
+					<span class="fa fa-exchange" aria-hidden="true"></span>&nbsp;Open Payload Mapper</a>
 			</div>
 
 			<div ng-show="authority === 'ROLE_ADMIN' || authority === 'ROLE_USER'">
