--- a/repository/repository-web/src/main/resources/static/partials/mapping/includes/fbmapping-template.html
+++ b/repository/repository-web/src/main/resources/static/partials/mapping/includes/fbmapping-template.html
@@ -46,6 +46,29 @@
 					  </div>
 			</form>
 	</div>
+	<div uib-accordion-group class="panel-default" heading="Configuration Properties" ng-show="properties[property.name].configurationProperties.length > 0" is-open="true">
+     	Specify mapping expressions to map device payload data to thing type properties. Optionally, set mapping conditions to define when the mappings should be applied.
+     		<form class="form-horizontal">
+					  <div class="form-group">
+						<ng-form name="{{property.name}}MappingForm" class="ng-pristine ng-valid ng-valid-pattern">
+						
+							<div ng-repeat="configurationProperty in properties[property.name].configurationProperties">	
+								<label ng-hide="configurationProperty.mandatory" for="{{configurationProperty.name}}" class="col-sm-3 control-label">{{configurationProperty.name}} <small style="color:grey;font-size:10px">{{configurationProperty.type}}</small></label>
+								<label ng-show="configurationProperty.mandatory" for="{{configurationProperty.name}}" class="col-sm-3 control-label">{{configurationProperty.name}}* 	<small style="color:grey;font-size:10px">{{configurationProperty.type}}</small></label>
+								<div class="col-sm-3">
+									​<textarea placeholder="Add condition" class="form-control" name="{{statusProperty.name}}Condition" id="{{configurationProperty.name}}Condition" ng-model="configurationProperty.stereotypes[0].attributes['condition']"></textarea>
+									<small style="color:grey;font-size:10px">Example: obj/x &gt; 100. <a target="_blank" href="https://github.com/eclipse/vorto/blob/development/server/repo/repository-mapping/docs/built_in_converters.md">More Info</a></small>
+								</div>
+								<div class="col-sm-6">
+									​<textarea ng-required="configurationProperty.mandatory" placeholder="Add path expression" class="form-control" name="{{configurationProperty.name}}" id="{{configurationProperty.name}}" ng-model="configurationProperty.stereotypes[0].attributes['xpath']"></textarea>
+								    <span class="error" ng-show="{{property.name}}MappingForm.$error.required && configurationProperty.mandatory" style="color:red;font-size:12px">Cannot be blank</span><br>    
+									<small style="color:grey;font-size:10px">Example: obj/x. <a target="_blank" href="https://github.com/eclipse/vorto/blob/development/server/repo/repository-mapping/docs/built_in_converters.md">More Info</a></small>
+								</div>
+							</div>					
+						</ng-form>
+					  </div>
+			</form>
+	</div>
  </uib-accordion>
  
 <script type="text/ng-template" id="group-template.html">
