--- a/repository/repository-web/src/main/resources/static/partials/mapping/mappingcreator.html
+++ b/repository/repository-web/src/main/resources/static/partials/mapping/mappingcreator.html
@@ -14,6 +14,10 @@
 					<dd class="ng-binding">
 					<span class="state state-{{state}}">{{ state }}</span>
 				</dd>
+				<dt>Key:</dt>
+					<dd class="ng-binding">
+					<span>{{ targetPlatform }}</span>
+				</dd>
              </div>
                  <div class="col-md-10">
                       <h4>
