--- a/repository/repository-web/src/main/resources/static/partials/mapping/includes/fbmapping-template.html
+++ b/repository/repository-web/src/main/resources/static/partials/mapping/includes/fbmapping-template.html
@@ -1,5 +1,5 @@
 <uib-accordion close-others="true">
-	<div uib-accordion-group heading="Custom Converters ({{getCustomFunctionsCount(property.name)}})" class="panel-default" heading="none">
+	<div uib-accordion-group template-url="group-template.html" heading="Custom Converters ({{getCustomFunctionsCount(property.name)}})" class="panel-default" heading="none">
 		<div ng-show="customFunctions.length > 0 && getCustomFunctionsCount(property.name) > 0">
 		Your converters: 
 		     <ul ng-if="customFunctions.length > 0">
@@ -23,7 +23,7 @@
 	     <button ng-hide="editMode" type="button" class="btn btn-default btn-sm" ng-click="addFunction(property.name,true)">Add Function</button>
 	     </br>
 	</div>
-	<div uib-accordion-group class="panel-default" heading="Status Properties" ng-show="properties[property.name].statusProperties.length > 0" is-open="true">
+	<div uib-accordion-group template-url="group-template.html" class="panel-default" heading="Status Properties" ng-show="properties[property.name].statusProperties.length > 0" is-open="true">
      	Specify mapping expressions to map device payload data to thing type properties. Optionally, set mapping conditions to define when the mappings should be applied.
      		<form class="form-horizontal">
 					  <div class="form-group">
@@ -46,7 +46,7 @@
 					  </div>
 			</form>
 	</div>
-	<div uib-accordion-group class="panel-default" heading="Configuration Properties" ng-show="properties[property.name].configurationProperties.length > 0" is-open="true">
+	<div uib-accordion-group template-url="group-template.html" class="panel-default" heading="Configuration Properties" ng-show="properties[property.name].configurationProperties.length > 0" is-open="true">
      	Specify mapping expressions to map device payload data to thing type properties. Optionally, set mapping conditions to define when the mappings should be applied.
      		<form class="form-horizontal">
 					  <div class="form-group">
@@ -72,16 +72,18 @@
  </uib-accordion>
  
 <script type="text/ng-template" id="group-template.html">
-    <div class="panel-heading">
-      <h4>
-      	<a href class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading">
-          <span uib-accordion-header ng-class="{'text-muted': isDisabled}">
-        	{{heading}} <i class="pull-right glyphicon" ng-class="{'fa fa-minus': isOpen, 'fa fa-plus': !isOpen}"></i>
-          </span>
-        </a>
-      </h4>
-    </div>
-    <div class="panel-collapse collapse" uib-collapse="!isOpen">
-      <div class="panel-body" ng-transclude></div>
+	<div>
+	    <div class="panel-heading">
+	      <h4>
+	      	<a href class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading">
+	          <span uib-accordion-header ng-class="{'text-muted': isDisabled}">
+	        	{{heading}} <i class="pull-right glyphicon" ng-class="{'fa fa-minus': isOpen, 'fa fa-plus': !isOpen}"></i>
+	          </span>
+	        </a>
+	      </h4>
+	    </div>
+	    <div class="panel-collapse collapse" uib-collapse="!isOpen">
+	      <div class="panel-body" ng-transclude></div>
+	    </div>
     </div>
   </script>
